Dupliverts ignore modifiers on mesh #34230

Closed
opened 2013-02-13 19:00:49 +01:00 by Tobias Oelgarte · 5 comments

%%%--- Blender version with error ---
r54527

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

If i add an mirror or array modifier (or some other constructive modifier) to a mesh that is the parent for dupliverts then the duplicates are only visible at the original locations of the mesh without modifiers. If i go into edit mode and activate the the fourth button of the modifiers (so that they are visible in edit-mode) then the duplicates are displayed correctly, but only in edit mode.

If i render this, then the duplicates may or may be not at the original location (mesh without modifiers). They appear sometimes somewhere else and do also not respect the modifiers. But even worse, they are displayed for the newly added vertices of the modifiers.

In short: Dupliverts should respect constructive modifiers and use all vertices.

I appended an example file. Just press TAB to enter edit-mode and you should see whats going on.
%%%

%%%--- Blender version with error --- r54527 - Steps for others to reproduce the error (preferably based on attached .blend file) --- If i add an mirror or array modifier (or some other constructive modifier) to a mesh that is the parent for dupliverts then the duplicates are only visible at the original locations of the mesh without modifiers. If i go into edit mode and activate the the fourth button of the modifiers (so that they are visible in edit-mode) then the duplicates are displayed correctly, but only in edit mode. If i render this, then the duplicates may or may be not at the original location (mesh without modifiers). They appear sometimes somewhere else and do also not respect the modifiers. But even worse, they are displayed for the newly added vertices of the modifiers. In short: Dupliverts should respect constructive modifiers and use all vertices. I appended an example file. Just press TAB to enter edit-mode and you should see whats going on. %%%

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Confirmed... why oh why!%%%

%%%Confirmed... why oh why!%%%
Member

%%%Ok - assigned to self, let's start digging%%%

%%%Ok - assigned to self, let's start digging%%%
Member

%%%Goes back all the way to to 2005, when "DerivedMesh" was introduced in Blender.

Fix goes to svn right now, thanks for the report!%%%

%%%Goes back all the way to to 2005, when "DerivedMesh" was introduced in Blender. Fix goes to svn right now, thanks for the report!%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34230
No description provided.